--- a/delivery-rn-app/package.json
+++ b/delivery-rn-app/package.json
@@ -15,14 +15,16 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-tailwindcss": "^1.1.11",
-    "tailwindcss": "^3.1.8",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.1.8"
   },
   "private": true
 }
