--- a/delivery-rn-app/package.json
+++ b/delivery-rn-app/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "init": "^0.1.2",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-web": "~0.18.7",
+    "sanity": "^2.33.2",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
